--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-x86_64-${{ runner.os }}.dmg
           path: "build/VGMTrans.dmg"
   Ubuntu:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-18.04
     name: Linux
     steps:
       - uses: actions/checkout@v2
@@ -46,15 +46,15 @@ jobs:
           echo "BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
       - name: "Install dependencies"
         run: |
-          sudo add-apt-repository ppa:beineri/opt-qt-5.15.2-xenial -y
+          sudo add-apt-repository ppa:beineri/opt-qt-5.15.2-bionic -y
           sudo apt clean
           sudo apt update
-          sudo apt install -y pkg-config qt515base qt515svg libjack-dev libsndfile1-dev libpulse-dev libglib2.0-dev ninja-build libgl1-mesa-dev
-          wget https://github.com/FluidSynth/fluidsynth/archive/v2.1.7.zip
-          unzip v2.1.7.zip
-          cd fluidsynth-2.1.7
+          sudo apt install -y pkg-config qt515base qt515svg qt515wayland libjack-dev libsndfile1-dev libpulse-dev libglib2.0-dev ninja-build libgl1-mesa-dev
+          wget https://github.com/FluidSynth/fluidsynth/archive/v2.1.9.zip
+          unzip v2.1.9.zip
+          cd fluidsynth-2.1.9
           mkdir build && cd build
-          cmake -DCMAKE_C_COMPILER="gcc-9" -DCMAKE_CXX_COMPILER="g++-9" -Denable-network=off -Denable-ipv6=off -DCMAKE_INSTALL_PREFIX=/usr/ -DLIB_INSTALL_DIR=lib -GNinja ..
+          cmake -DCMAKE_C_COMPILER="gcc-10" -DCMAKE_CXX_COMPILER="g++-10" -Denable-network=off -Denable-ipv6=off -DCMAKE_INSTALL_PREFIX=/usr/ -DLIB_INSTALL_DIR=lib -GNinja ..
           cmake --build . --config "Release" --parallel
           sudo ninja install
           cd ../..
@@ -63,7 +63,7 @@ jobs:
           mkdir build
           cd build
           cmake --version
-          cmake -DCMAKE_C_COMPILER="gcc-9" -DCMAKE_CXX_COMPILER="g++-9" -DCMAKE_INSTALL_PREFIX=/usr/bin -DCMAKE_BUILD_TYPE=Release -GNinja ..
+          cmake -DCMAKE_C_COMPILER="gcc-10" -DCMAKE_CXX_COMPILER="g++-10" -DCMAKE_INSTALL_PREFIX=/usr/bin -DCMAKE_BUILD_TYPE=Release -GNinja ..
       - name: "Build project"
         run: cmake --build build --config "Release" --parallel
       - name: "Run tests"
